make sure menu text is visible

--- a/assets/sass/components/_banner.scss
+++ b/assets/sass/components/_banner.scss
@@ -8,7 +8,7 @@
 
 	.banner {
 		#header + & {
-			margin-top: (_size(header, default) * -1);
+			// margin-top: (_size(header, default) * -1);
 		}
 
 
